--- a/Interview Questions/Python_Refresher.ipynb
+++ b/Interview Questions/Python_Refresher.ipynb
@@ -497,11 +497,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JsjcEO_u8OMb",
-        "outputId": "1a874425-c53b-493d-a7bb-104b64adef9a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JsjcEO_u8OMb",
+        "outputId": "1a874425-c53b-493d-a7bb-104b64adef9a"
       },
       "source": [
         "word = 'aeioubcdfg'\r\n",
@@ -525,11 +525,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lOk91aTy8QB2",
-        "outputId": "1baa9cae-ef96-4443-87d4-9c0fa6ae50d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lOk91aTy8QB2",
+        "outputId": "1baa9cae-ef96-4443-87d4-9c0fa6ae50d4"
       },
       "source": [
         "def foo (i= []):\r\n",
@@ -553,11 +553,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-uv53y-s8Upf",
-        "outputId": "a2477bf3-3637-4b8f-f1ed-8a2f95bbade3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-uv53y-s8Upf",
+        "outputId": "a2477bf3-3637-4b8f-f1ed-8a2f95bbade3"
       },
       "source": [
         "a = [0,1,2,3,4,5,6,7,8,9]\r\n",
@@ -586,11 +586,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nPqbPVLB8iGC",
-        "outputId": "2b30260f-198d-4243-8aca-18b55ec5517a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nPqbPVLB8iGC",
+        "outputId": "2b30260f-198d-4243-8aca-18b55ec5517a"
       },
       "source": [
         "print([i for i in range(10)])\r\n",
@@ -616,11 +616,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JCmF9Svl8jFz",
-        "outputId": "fedcde9c-4812-4163-8f36-0505ed50e410",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JCmF9Svl8jFz",
+        "outputId": "fedcde9c-4812-4163-8f36-0505ed50e410"
       },
       "source": [
         "def add_three(x):\r\n",
@@ -648,11 +648,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NJrgdpCG89D9",
-        "outputId": "cef1c53f-3169-46c1-bad2-1ca2d838bc64",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NJrgdpCG89D9",
+        "outputId": "cef1c53f-3169-46c1-bad2-1ca2d838bc64"
       },
       "source": [
         "def add_three(x):\r\n",
@@ -683,11 +683,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6NVGT_sF9IYg",
-        "outputId": "99ba22cc-a155-4705-ec20-421c67b919ec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6NVGT_sF9IYg",
+        "outputId": "99ba22cc-a155-4705-ec20-421c67b919ec"
       },
       "source": [
         "li = ['a','b','c']\r\n",
@@ -712,11 +712,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "C-4W9vP69JwA",
-        "outputId": "e2fa993e-2a03-4c08-b19f-a5f19750e344",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "C-4W9vP69JwA",
+        "outputId": "e2fa993e-2a03-4c08-b19f-a5f19750e344"
       },
       "source": [
         "a = [1,2]\r\n",
@@ -743,11 +743,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lMFbE_C59JlO",
-        "outputId": "6df9dff8-3f32-4a52-c176-4f45b7a431f1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lMFbE_C59JlO",
+        "outputId": "6df9dff8-3f32-4a52-c176-4f45b7a431f1"
       },
       "source": [
         "a = 5.12345\r\n",
@@ -773,11 +773,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Q60GsnUa9JHl",
-        "outputId": "41f6b54b-14af-4403-d555-d733e4d0e7aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Q60GsnUa9JHl",
+        "outputId": "41f6b54b-14af-4403-d555-d733e4d0e7aa"
       },
       "source": [
         "value = 5\r\n",
@@ -804,12 +804,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6JqCvp239ZRc",
-        "outputId": "0d6c0aa6-c263-477f-9803-ad37ee738e8c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "6JqCvp239ZRc",
+        "outputId": "0d6c0aa6-c263-477f-9803-ad37ee738e8c"
       },
       "source": [
         "# binary inetger\r\n",
@@ -838,11 +838,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "APTIrRfF9ZKo",
-        "outputId": "1de9f8c6-0e96-4e15-9619-0ba5cc31b42b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "APTIrRfF9ZKo",
+        "outputId": "1de9f8c6-0e96-4e15-9619-0ba5cc31b42b"
       },
       "source": [
         "'a' in ['a','b','c']\r\n",
@@ -869,11 +869,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "j_I8yP7M9ZB0",
-        "outputId": "d777b71a-d6b4-43c7-e983-8d3c41bc9f58",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "j_I8yP7M9ZB0",
+        "outputId": "d777b71a-d6b4-43c7-e983-8d3c41bc9f58"
       },
       "source": [
         "a = [1,2,3]\r\n",
@@ -900,11 +900,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3OUv5hg09l6S",
-        "outputId": "4d09d1db-0a36-4608-91ed-1eb78a815ba2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3OUv5hg09l6S",
+        "outputId": "4d09d1db-0a36-4608-91ed-1eb78a815ba2"
       },
       "source": [
         "abs(2)\r\n",
@@ -931,11 +931,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8PwLDm909n6H",
-        "outputId": "0b3b05a0-703d-45f7-e453-b7bf945f1d25",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8PwLDm909n6H",
+        "outputId": "0b3b05a0-703d-45f7-e453-b7bf945f1d25"
       },
       "source": [
         "a = ['a','b','c']\r\n",
@@ -962,11 +962,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rPffSEXI9nxS",
-        "outputId": "667a02bc-145c-4c4e-9860-130013233588",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rPffSEXI9nxS",
+        "outputId": "667a02bc-145c-4c4e-9860-130013233588"
       },
       "source": [
         "d = {'c':3, 'd':4, 'b':2, 'a':1}\r\n",
@@ -992,12 +992,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mAd2fZWl9wsS",
-        "outputId": "969db22a-2ad4-4539-f0dd-56bd972cab88",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "mAd2fZWl9wsS",
+        "outputId": "969db22a-2ad4-4539-f0dd-56bd972cab88"
       },
       "source": [
         "s = 'A string with     white space'\r\n",
@@ -1026,12 +1026,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tcgWitkT9yro",
-        "outputId": "5b708b0a-eeb4-4b43-ccec-77dc308302e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "tcgWitkT9yro",
+        "outputId": "5b708b0a-eeb4-4b43-ccec-77dc308302e1"
       },
       "source": [
         "s = 'A string with     white space'\r\n",
@@ -1060,13 +1060,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WE3xJHGA93cW",
-        "outputId": "1769a738-cd50-4357-f5aa-b80146f50319",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WE3xJHGA93cW",
+        "outputId": "6cdb5965-f963-40e4-af99-570f15effac2"
       },
       "source": [
+        "# continue forces the loop to start at the next iteration while pass means \"there is no code to execute here\" and will continue through the remainder or the loop body. \r\n",
+        "# continue will jump back to the top of the loop. pass will continue processing\r\n",
         "a = [1,2,3,4,5]\r\n",
         "for i in a:\r\n",
         "    if i > 3:\r\n",
@@ -1078,7 +1080,7 @@
         "#=> 4\r\n",
         "#=> 5"
       ],
-      "execution_count": 19,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -1096,11 +1098,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "h6iy5bei95nb",
-        "outputId": "cb3d3445-b8a7-4a7e-f5e5-388e1901f516",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "h6iy5bei95nb",
+        "outputId": "71b7ab77-5a70-4c71-b9eb-1aa9e93cd7a0"
       },
       "source": [
         "for i in a:\r\n",
@@ -1111,7 +1113,7 @@
         "#=> 4\r\n",
         "#=> 5"
       ],
-      "execution_count": 21,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -1127,11 +1129,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bsUwgcyF95ew",
-        "outputId": "4c410082-d862-4656-e074-468c7f83471e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bsUwgcyF95ew",
+        "outputId": "4c410082-d862-4656-e074-468c7f83471e"
       },
       "source": [
         "for i in a:\r\n",
@@ -1156,11 +1158,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "D1I5r_2z95Vr",
-        "outputId": "bb89e872-25ad-4a92-c35c-b9c5ef4b56a4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "D1I5r_2z95Vr",
+        "outputId": "bb89e872-25ad-4a92-c35c-b9c5ef4b56a4"
       },
       "source": [
         "'123a'.isnumeric()\r\n",
@@ -1187,11 +1189,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gnJmnght-CHg",
-        "outputId": "deccaf57-4599-4cfe-a4b6-9e762da98f9d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gnJmnght-CHg",
+        "outputId": "deccaf57-4599-4cfe-a4b6-9e762da98f9d"
       },
       "source": [
         "'123a'.isalpha()\r\n",
@@ -1218,11 +1220,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "apGyYJrg-Fik",
-        "outputId": "5e9354e0-3b46-4b2b-85b9-4141e8e1d164",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "apGyYJrg-Fik",
+        "outputId": "5e9354e0-3b46-4b2b-85b9-4141e8e1d164"
       },
       "source": [
         "'123abc...'.isalnum()\r\n",
@@ -1249,11 +1251,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WXrclfJD-FcW",
-        "outputId": "a66f5216-fffd-4c02-d5da-ad700b00f319",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WXrclfJD-FcW",
+        "outputId": "a66f5216-fffd-4c02-d5da-ad700b00f319"
       },
       "source": [
         "d = {'id':7, 'name':'Shiba', 'color':'brown', 'speed':'very slow'}\r\n",
@@ -1279,12 +1281,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sX_TlfiJ-FT6",
-        "outputId": "b215d36c-a59d-4e16-c1e3-9c236903fa29",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "sX_TlfiJ-FT6",
+        "outputId": "b215d36c-a59d-4e16-c1e3-9c236903fa29"
       },
       "source": [
         "small_word = 'potatocake'\r\n",
@@ -1316,11 +1318,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3mQ8Yt75-Q_E",
-        "outputId": "0183dfb9-42cb-4cd2-d44c-b9358ecc4399",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3mQ8Yt75-Q_E",
+        "outputId": "0183dfb9-42cb-4cd2-d44c-b9358ecc4399"
       },
       "source": [
         "li = ['a','b','c','d']\r\n",
@@ -2955,17 +2957,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ZCBaWCdMcgdY"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
