--- a/Algorithms_and_Data_Structures_in_Python.ipynb
+++ b/Algorithms_and_Data_Structures_in_Python.ipynb
@@ -10,7 +10,7 @@
         "JaiTotpDj3Og",
         "vFxOpp-qmjB1"
       ],
-      "authorship_tag": "ABX9TyMzOe83CloCzMrmjBNxHMfJ",
+      "authorship_tag": "ABX9TyMw9VHqcjTA7uHL1E7O2vWS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
       },
       "source": [
         "### Arrays\r\n",
-        "* Can be used to store items of different type\r\n",
+        "* Can be used to store items of same type. List can be used for different data types\r\n",
         "* Dynamic array - when size of the array is changing dynamically\r\n",
         "* Several abstract data types such as lookup tables/hashtables, heaps use these arrays as underlying data structure"
       ]
@@ -172,7 +172,7 @@
         "l1 = [1,2,3,4,5]\r\n",
         "l1.pop() # return the last item"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -259,7 +259,7 @@
         "for i in range(0,5):\r\n",
         "  print(i)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,7 +287,7 @@
         "for i in range(1,5):\r\n",
         "  print(i)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,7 +315,7 @@
         "for n in x:\r\n",
         "  print(n)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -341,7 +341,7 @@
         "for n in x:\r\n",
         "  print(n)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -903,6 +903,7 @@
       "source": [
         "### Queue\r\n",
         "Operations: enqueue(), dequeue() and peek()\r\n",
+        "* enqueue is adding items, dequeue is removing items\r\n",
         "* FIFO structure: First In First Out\r\n",
         "* Can be visualized as a funnel. first thing that enters from top is the one to get out from the bottom of the funnel\r\n",
         "* Enqueue operation: adding new item to the end of the queue is simple\r\n",
