--- a/Interview Questions/Python_Refresher.ipynb
+++ b/Interview Questions/Python_Refresher.ipynb
@@ -475,10 +475,10 @@
       },
       "source": [
         "  Lists:\r\n",
-        "  * append()\r\n",
-        "  * insert\r\n",
-        "  * extend: To append elements from another list to the current list\r\n",
-        "  * remove(item) : just remove() cannot be used but pop() can be used\r\n",
+        "  * list.append() - add item at the end\r\n",
+        "  * list.insert(at indec, val)\r\n",
+        "  * list.extend(list2) : To append elements from another list to the current list\r\n",
+        "  * list.remove(item) : removes item when it appears for the first time\r\n",
         "  * pop(2) : removes the specified index i.e. 2 in this case\r\n",
         "  * pop(): removes last item\r\n",
         "  * del list[2] : removes the specified index\r\n",
@@ -489,9 +489,9 @@
         "  * list.sort() on string avlues gives all capital letter sorted first before lower case letters\r\n",
         "  * list.sort(key = str.lower) : To perform case-insensitive sort of the list\r\n",
         "  * list.reverse() : Reverse the order of the list items. similar to List[::-1]\r\n",
-        "  * list.copy() : to copy lists\r\n",
-        "  * list.count(): returns number of elements with the specified values\r\n",
-        "  * list.index(\"sam\")\r\n"
+        "  * list.copy() : to copy lists, shallow copy\r\n",
+        "  * list.count(item): returns number of elements with the specified values\r\n",
+        "  * list.index(\"sam\") : returns index of the item, list.index(x[, start[, end]])\r\n"
       ]
     },
     {
@@ -509,7 +509,7 @@
         "print(word[0:3])\r\n",
         "print(word [3:])"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -538,7 +538,7 @@
         "print(foo ()) # appends 1 first time\r\n",
         "print(foo ()) # appends 1 again"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -569,7 +569,7 @@
         "#=> [2, 3, 4, 5, 6, 7]\r\n",
         "print(a[2:8:2]) #list[start:stop:step]"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,7 +600,7 @@
         "print([i for i in range(2,10,2)])\r\n",
         "#=> [2, 4, 6, 8]"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -629,7 +629,7 @@
         "[i for i in map(add_three, li)]\r\n",
         "#=> [4, 5, 6]"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -664,7 +664,7 @@
         "[i for i in filter(add_three, li)]\r\n",
         "#=> [2, 4, 6, 8]"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -697,7 +697,7 @@
         "#=> ['a', 'b', 'c']\r\n",
         "#=> ['c', 'b', 'a']"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -724,7 +724,7 @@
         "a + b\r\n",
         "#=> [1, 2, 3, 4, 5]"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -754,7 +754,7 @@
         "round(a,3)\r\n",
         "#=> 5.123"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -789,7 +789,7 @@
         "print(value)\r\n",
         "#=> 4"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -816,7 +816,7 @@
         "bin(5)\r\n",
         "#=> '0b101'"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -850,7 +850,7 @@
         "'a' in [1,2,3]\r\n",
         "#=> False"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -885,7 +885,7 @@
         "print(b)\r\n",
         "#=> [1, 2, 3, 4, 5]"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -912,7 +912,7 @@
         "abs(-2)\r\n",
         "#=> 2"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -943,7 +943,7 @@
         "[(k,v) for k,v in zip(a,b)]\r\n",
         "#=> [('a', 1), ('b', 2), ('c', 3)]"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -973,7 +973,7 @@
         "sorted(d.items())\r\n",
         "#=> [('a', 1), ('b', 2), ('c', 3), ('d', 4)]"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1004,7 +1004,7 @@
         "''.join(s.split())\r\n",
         "#=> 'Astringwithwhitespace'"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1038,7 +1038,7 @@
         "s.replace(' ', '')\r\n",
         "#=> 'Astringwithwhitespace' "
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1080,7 +1080,7 @@
         "#=> 4\r\n",
         "#=> 5"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1113,7 +1113,7 @@
         "#=> 4\r\n",
         "#=> 5"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1143,7 +1143,7 @@
         "#=> 1\r\n",
         "#=> 2"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1170,7 +1170,7 @@
         "'123'.isnumeric()\r\n",
         "#=> True"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1201,7 +1201,7 @@
         "'a'.isalpha()\r\n",
         "#=> True"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1232,7 +1232,7 @@
         "'123abc'.isalnum()\r\n",
         "#=> True"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1262,7 +1262,7 @@
         "list(d)\r\n",
         "#=> ['id', 'name', 'color', 'speed']"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1296,7 +1296,7 @@
         "big_word.lower()\r\n",
         "#=> 'fishcake'"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1341,7 +1341,7 @@
         "print(li)\r\n",
         "#=> ['a', 'b', 'd']"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
