--- a/Interview Questions/RandomQuestions.ipynb
+++ b/Interview Questions/RandomQuestions.ipynb
@@ -6,7 +6,7 @@
       "name": "RandomQuestions.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPjA72n+qQFc6Tncn9j0M/n",
+      "authorship_tag": "ABX9TyOOBwUynBvovQhKR1IBHPcL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2092,6 +2092,93 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2R5aY7wDa1Bb"
+      },
+      "source": [
+        "# Algo Monster"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3NvcLJWba3xt"
+      },
+      "source": [
+        "# Given a list of points on a 2D plane. Find k closest points to origin (0, 0).\r\n",
+        "# Input: [(1, 1), (2, 2), (3, 3)], 1\r\n",
+        "# Output: [(1, 1)]\r\n",
+        "from typing import List, Tuple\r\n",
+        "\r\n",
+        "def k_closest_points(points: List[Tuple[int, int]], k: int) -> List[Tuple[int, int]]:\r\n",
+        "  Distance = []\r\n",
+        "  for i in points:\r\n",
+        "    Distance.append(int((i[0]**2)+(i[1]**2)))\r\n",
+        "  Distance_Dict = dict(zip(points,Distance)) # Create dictionary using 2 lists\r\n",
+        "Distance_Dict = sorted(Distance_Dict)\r\n",
+        "  return Distance\r\n",
+        "\r\n",
+        "k_closest_points([(1, 1), (2, 2), (3, 3)],1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7pNONxZta364",
+        "outputId": "5628f271-e851-4e2e-b3c5-bf890c462504",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "points = [(2, 2), (1, 1), (3, 3)]\r\n",
+        "Distance = []\r\n",
+        "k=2\r\n",
+        "for i in points:\r\n",
+        "  Distance.append(int((i[0]**2)+(i[1]**2)))\r\n",
+        "  # Create dictionary using 2 lists\r\n",
+        "  Distance_Dict = dict(zip(points,Distance))\r\n",
+        "  Distance_Dict = sorted(Distance_Dict)\r\n",
+        "  Distance_Dict_k = Distance_Dict[:k]\r\n",
+        "print(Distance,Distance_Dict,Distance_Dict_k)"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[8, 2, 18] [(1, 1), (2, 2), (3, 3)] [(1, 1), (2, 2)]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "42HDV7SOa33b"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GGWEinuDa30p"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
