--- a/Interview Questions/RandomQuestions.ipynb
+++ b/Interview Questions/RandomQuestions.ipynb
@@ -6,7 +6,7 @@
       "name": "RandomQuestions.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOOBwUynBvovQhKR1IBHPcL",
+      "authorship_tag": "ABX9TyM3iEHyBHV+tZUHq0HiOobM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -585,6 +585,114 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "kTOuMt2Kh7hP",
+        "outputId": "978b9a8c-5f47-42d9-a6af-c6afb91cedb5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Fibonacci sequence\r\n",
+        "Arr = [1,1]\r\n",
+        "for i in range(2,8):\r\n",
+        "  Arr.append(int(Arr[i-1]+Arr[i-2]))\r\n",
+        "print(Arr)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 1, 2, 3, 5, 8, 13, 21]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EWzs4lkGiXdE",
+        "outputId": "985db46c-85e5-4aa0-9400-92789edfc86b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Fibonacci sequence : Bottom-up approach\r\n",
+        "def fibo(n):\r\n",
+        "   if n<=1:\r\n",
+        "       return n\r\n",
+        "   else:\r\n",
+        "       return(fibo(n-1) + fibo(n-2))\r\n",
+        "\r\n",
+        "print(fibo(4))\r\n",
+        "\r\n",
+        "print(\"\\n\",\"Whole Sequence\")\r\n",
+        "for i in range(1,8):\r\n",
+        "  print(fibo(i))"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "\n",
+            " Whole Sequence\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "8\n",
+            "13\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tT6iANX3nxvH",
+        "outputId": "d6d654b6-b77e-494c-cda3-1420cfc314ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Bubble sort - Repeatedly steps through the list to be sorted, compares each pair of adjacent items and swaps them if they are in the wrong order. O( N2 )\r\n",
+        "nums = [3,2,1,5,4]\r\n",
+        "for i in range(len(nums)-1): \r\n",
+        "  for j in range(0,len(nums)-1-i,1): # In first iteration of i, last element is sorted. In second iteration of i, second to last element is sorted and so on i.e why len(nums)-1-i as second argument.Third element in range i.e 1 is the increment\r\n",
+        "    if nums[j] > nums[j+1]:\r\n",
+        "      nums[j],nums[j+1] = nums[j+1],nums[j]\r\n",
+        "    print(nums)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[2, 3, 1, 5, 4]\n",
+            "[2, 1, 3, 5, 4]\n",
+            "[2, 1, 3, 5, 4]\n",
+            "[2, 1, 3, 4, 5]\n",
+            "[1, 2, 3, 4, 5]\n",
+            "[1, 2, 3, 4, 5]\n",
+            "[1, 2, 3, 4, 5]\n",
+            "[1, 2, 3, 4, 5]\n",
+            "[1, 2, 3, 4, 5]\n",
+            "[1, 2, 3, 4, 5]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "Nsi_rZULOFkX",
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -797,8 +905,7 @@
       "source": [
         "x = Counter(\"Dirty room\")\r\n",
         "del x[' ']\r\n",
-        "x\r\n",
-        "\r\n"
+        "x"
       ],
       "execution_count": null,
       "outputs": [
@@ -2130,10 +2237,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "7pNONxZta364",
-        "outputId": "5628f271-e851-4e2e-b3c5-bf890c462504",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5628f271-e851-4e2e-b3c5-bf890c462504"
       },
       "source": [
         "points = [(2, 2), (1, 1), (3, 3)]\r\n",
@@ -2147,7 +2254,7 @@
         "  Distance_Dict_k = Distance_Dict[:k]\r\n",
         "print(Distance,Distance_Dict,Distance_Dict_k)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
